--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ionic/react": "^7.0.0",
     "@ionic/react-router": "^7.8.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@redux-devtools/extension": "^3.3.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "class-variance-authority": "^0.7.0",
@@ -31,7 +32,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@capacitor/cli": "5.7.2",
