--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "@capacitor/app": "5.0.7",
     "@capacitor/core": "5.7.2",
+    "@capacitor/filesystem": "^5.2.1",
     "@capacitor/haptics": "5.0.7",
     "@capacitor/keyboard": "5.0.8",
+    "@capacitor/preferences": "^5.0.7",
     "@capacitor/status-bar": "5.0.7",
     "@emotion/css": "^11.11.2",
     "@emotion/styled": "^11.11.0",
