feat: added editor on page and sidemenu

--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@capacitor/keyboard": "5.0.8",
     "@capacitor/preferences": "^5.0.7",
     "@capacitor/status-bar": "5.0.7",
+    "@ckeditor/ckeditor5-autosave": "^41.2.0",
+    "@ckeditor/ckeditor5-build-classic": "^41.2.0",
+    "@ckeditor/ckeditor5-react": "^6.2.0",
     "@emotion/css": "^11.11.2",
     "@emotion/styled": "^11.11.0",
     "@ionic/react": "^7.0.0",
