feat: sorting by last modified :partying_face:

--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@types/react-router-dom": "^5.3.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
+    "dayjs": "^1.11.10",
     "immer": "^10.0.4",
     "ionicons": "^7.0.0",
     "lucide-react": "^0.356.0",
