feat: update to tag type and filtering

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "dayjs": "^1.11.10",
     "immer": "^10.0.4",
     "ionicons": "^7.0.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.356.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -51,6 +52,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/lodash": "^4.17.0",
     "@types/node": "^20.11.26",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
