--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
+    "html-to-text": "^9.0.5",
     "immer": "^10.0.4",
     "ionicons": "^7.0.0",
     "lodash": "^4.17.21",
@@ -52,6 +53,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/html-to-text": "^9.0.4",
     "@types/lodash": "^4.17.0",
     "@types/node": "^20.11.26",
     "@types/react": "^18.0.27",
