--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@capacitor/core": "5.7.2",
     "@capacitor/filesystem": "^5.2.1",
     "@capacitor/haptics": "5.0.7",
+    "@capacitor/ios": "5.7.2",
     "@capacitor/keyboard": "5.0.8",
     "@capacitor/preferences": "^5.0.7",
     "@capacitor/status-bar": "5.0.7",
