--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@ark-ui/react": "^2.2.3",
+    "@capacitor/android": "5.7.2",
     "@capacitor/app": "5.0.7",
     "@capacitor/core": "5.7.2",
     "@capacitor/filesystem": "^5.2.1",
